...
                    showStampPicker = true
                } label: {
                    Image(.stamp)
                        .font(.title2)
                }
                .buttonStyle(.square)
                .accessibilityIdentifier("CalendarHeaderView_StampButton")
                .disabled(!isDaySelected)
                .stampPicker(
                    isPresented: $showStampPicker,
                    stamps: stamps,
                    selectStampHandler: selectStampHandler,
                    attachmentAnchor: .point(.bottom),
...
