...
                        viewModel.showingSheet = true
                    } label: {
                        Image(.stampPlus)
                            .font(.title2)
                    }
                    .buttonStyle(.square)
                    .accessibilityIdentifier("StampsView_PlusButton")
                }
                .padding(.horizontal, 20)
                .padding(.vertical, 16)
                Divider()
            }
            .background(Color.toolbarBackground)
...
